--- a/thesis_paper/graphs/GraphDefMesh.tex
+++ b/thesis_paper/graphs/GraphDefMesh.tex
@@ -23,7 +23,7 @@
 		\psline[linewidth=0.04](2.4370117,-3.7791796)(4.357012,0.0)(6.777012,-3.8791797)
 		\psline[linewidth=0.04](8.697012,0.2808203)(4.357012,0.0)(6.797012,4.06082)
 	\end{pdfpic} 
-	\caption{Example: $v_i$ and $v_j$ are vertices in mesh $M$ connected through edge $e_{ij}$. And $v_i$'s neighbor vertices set $N_{v_i}$ = \{$v_0$, $v_1$, $v_2$, $v_3$, $v_4$, $v_j$\}}
+	\caption[Mesh Example]{Example: $v_i$ and $v_j$ are vertices in mesh $M$ connected through edge $e_{ij}$. And $v_i$'s neighbor vertices set $N_{v_i}$ = \{$v_0$, $v_1$, $v_2$, $v_3$, $v_4$, $v_j$\}}
 	\label{fig:DefMesh}
 
 \end{figure}
